--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,8 +34,9 @@ android {
             excludes += ['META-INF/atomicfu.kotlin_module']
         }
     }
-
-
+    buildFeatures {
+        dataBinding true
+    }
     kotlinOptions {
         jvmTarget = '1.8'
     }
@@ -72,7 +73,7 @@ dependencies {
     // Testing
     testImplementation "junit:junit:$rootProject.junitVersion"
     androidTestImplementation "androidx.arch.core:core-testing:$rootProject.coreTestingVersion"
-    androidTestImplementation ("androidx.test.espresso:espresso-core:$rootProject.espressoVersion", {
+    androidTestImplementation("androidx.test.espresso:espresso-core:$rootProject.espressoVersion", {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     androidTestImplementation "androidx.test.ext:junit:$rootProject.androidxJunitVersion"
