--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,8 +13,13 @@
         android:theme="@style/Theme.NotesApp"
         tools:targetApi="33">
         <activity
-            android:name=".LiveDataTest.ActivityOne"
+            android:name=".dataBindingTest.ActivityTwo"
             android:exported="true" >
+
+        </activity>
+        <activity
+            android:name=".liveDataTest.ActivityOne"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -23,9 +28,7 @@
         </activity>
         <activity
             android:name=".MainActivity"
-            android:exported="true">
-
-        </activity>
+            android:exported="true"></activity>
     </application>
 
 </manifest>
